# systematically-improving-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  AGENT.md  CLAUDE.md  README.md  SNIPPET_IMPLEMENTATION_SUMMARY.md  build_book.sh  convert_notebooks.sh  convert_notebooks_to_md.py  course-preview.md  create_short_link.py  format_docs.py  index.html  mkdocs.yml  office_hours_to_workshops_plan.md  package-lock.json  package.json  pyproject.toml  remove_scripts.py  sitemap.xml  test.md  test2.md  todo.md
cohort_1/week5/: pyproject.toml
cohort_2/: .env  .env.example  .gitignore  README.md  convert.py  pyproject.toml  readme.md  requirements.txt
cohort_2/office-hours/: README.md  move-files.py  week1-summary.md  week2-summary.md  week3-summary.md  week4-summary.md
cohort_2/office-hours/week3/: week3-summary.md
cohort_2/scripts/: check_env.py  setup.sh  setup_fish.sh
cohort_2/week0/: 1. Using Jupyter Notebooks.ipynb  2. LanceDB.ipynb  3. Using Pydantic Evals.ipynb  README.md  uv.md
cohort_2/week1/: 1. synthetic_questions.ipynb  2. benchmark_retrieval.ipynb  2. benchmark_retrieval_logfire.ipynb  3. visualise_results.ipynb  3. visualise_results_logfire.ipynb  README.md  modal_vllm.py  pyproject.toml  questions-qwen.yaml  questions.yaml
cohort_2/week2/: 0.Generate_Synthetic.ipynb  1. Synthetic-Transactions-Logfire.ipynb  1. Synthetic-Transactions.ipynb  2. Finetune Cohere Logfire.ipynb  2. Finetune Cohere.ipynb  3. Open Source Models.ipynb  3. Open Source Models_logfire.ipynb  README.md  const.py  generated.jsonl  helpers.py  label.py  models.py  pyproject.toml  transactions.jsonl
cohort_2/week2/data/: categories.json  cleaned.jsonl  train_transactions.jsonl
cohort_2/week4/: 1  Generate Dataset.ipynb  1 Generate Dataset.ipynb  1.  Generate Dataset.ipynb  2. Topic Modelling.ipynb  3. Classifier.ipynb  4. Generate Synthetic Questions.ipynb  README.md  categories.yml  config.yml  kura_categories.yml  label.py  pyproject.toml
cohort_2/week4/checkpoints/: clusters.jsonl  conversations.json  dimensionality.jsonl  meta_clusters.jsonl  summaries.jsonl
cohort_2/week4/data/: cleaned.jsonl  filtered.jsonl  questions.jsonl  synthetic_questions.jsonl
cohort_2/week4/data/html/: can-i-pay-in-store-using-klarna.html  can-i-use-klarna-to-pay-for-subscriptions-and-on-demand-services.html  how-can-i-get-approved-to-pay-with-klarna.html  how-can-i-merge-my-klarna-accounts.html  how-can-i-pay-for-my-klarna-card-purchases.html  how-can-i-pay.html  how-can-i-report-a-fraud-attempt.html  how-can-i-use-klarna-on-apple-pay.html  how-do-i-block-or-cancel-my-klarna-card.html  how-do-i-change-my-billing-address.html  how-do-i-change-my-name.html  how-do-i-change-the-card-for-a-purchase.html  (+39 more)
cohort_2/week5/: 1. Generate Dataset.ipynb  1. StructuredExtraction.ipynb  2. Metadata Filtering Logfire.ipynb  2. Metadata Filtering.ipynb  2. Structured Extraction.ipynb  3. Text-2-SQL.ipynb  4. PDF-Parser.ipynb  README.md  categories.yml  helpers.py  pyproject.toml  queries.json  queries_v2.jsonl  questions.jsonl  taxonomy.yml
cohort_2/week6/: 1. Evaluate Tools.ipynb  2. Create Dataset.ipynb  2. Generate Dataset Logfire.ipynb  2. Generate Dataset.ipynb  2. Generating Dataset.ipynb  3. Improving Performance Logfire.ipynb  3. Improving Performance.ipynb  README.md  commands.yaml  extracted_commands.json  generate.py  helpers.py  old_queries.jsonl  pyproject.toml  queries.jsonl  queries.yaml  raw_commands.json  single_queries.json
cohort_2/week6/data/: commands.yaml
latest/capstone_project/: .env.example  01_exploring_wildchat.ipynb  02_loading_data_into_chroma.ipynb  AGENT.md  PART01_exploring_wildchat.ipynb  README.md  __init__.py  pyproject.toml  streamlit_app.py
latest/capstone_project/02_loading_data_into_db/: load_to_chromadb.py  load_to_lancedb.py  load_to_turbopuffer.py
latest/capstone_project/03_synthetic_question_generation/: README.md  processor.py  review_examples.ipynb  run_app.py  streamlit_app.py  test_setup.py
latest/capstone_project/PART01_exploration/: README.md
latest/capstone_project/PART02_loading_data_into_db/: README.md  load_to_chromadb.py  load_to_lancedb.py  load_to_turbopuffer.py
latest/capstone_project/PART03_synthetic_question_generation/: .gitignore  COMMENTARY.md  README.md  compute_recall.py  compute_synth_questions.py  generate_synthetic_queries.py  main.py  processor.py  recall_results_turbopuffer_v1.json  recall_results_turbopuffer_v2.json  search_app.py  test_refactor.py  verify_recall.py
latest/capstone_project/PART04_summarization/: CLAUDE.md  README.md  README_ChromaDB.md  agent_analysis_example.py  analyze_failures.py  check_overlap.py  compute_recall_matching_only.py  compute_recall_with_summaries.py  compute_summaries.py  failed_queries_qv1_sv5.json  failed_queries_qv2_sv4.json  failed_queries_qv3_sv4.json  failed_queries_qv5_sv4.json  failed_queries_qv5_sv5.json  load_summaries_to_chromadb.py  load_summaries_to_db.py  load_summaries_to_turbopuffer.py  observations.md  recall_results_summaries_qv1_sv1.json  recall_results_summaries_qv1_sv2.json  recall_results_summaries_qv1_sv3.json  recall_results_summaries_qv2_sv1.json  recall_results_summaries_qv2_sv2.json  recall_results_summaries_qv2_sv3.json  recall_results_summaries_qv2_sv4.json  recall_results_summaries_qv3_sv4.json  recall_results_summaries_v1.json  recall_results_summaries_v2.json  test_turbopuffer.py
latest/capstone_project/tests/: conftest.py  test_dao_chromadb.py  test_dao_turbopuffer.py  test_processor.py
latest/capstone_project/utils/: README.md  __init__.py  cli_common.py  dataloader.py  load_to_chromadb.py  load_to_lancedb.py  load_to_turbopuffer.py
latest/case_study/: .env.example  AGENTS.md  CLAUDE.md  README.md  analysis_summary_1000.md  config.py  generate_question_embeddings.py  main.py  pyproject.toml  verify_embeddings.py
latest/case_study/core/: cache.py  db.py  documents.py  embeddings.py  evaluation.py  reranking.py  search.py  summarization.py  synthetic_queries.py
latest/case_study/pipelines/: generation.py
(+435 files in other folders)
