[project]
name = "week4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "instructor>=1.6.4",
    "ipykernel>=6.29.5",
    "markdownify>=0.13.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "streamlit-shortcuts>=0.1.9",
    "streamlit>=1.40.1",
]
