[project]
name = "week4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "bertopic>=0.16.4",
    "bs4>=0.0.2",
    "fuzzywuzzy>=0.18.0",
    "instructor>=1.6.4",
    "ipykernel>=6.29.5",
    "markdownify>=0.13.1",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.1",
    "python-levenshtein>=0.26.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit-shortcuts>=0.1.9",
    "streamlit>=1.40.1",
]
