[project]
name = "week5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "braintrust>=0.0.173",
    "datasets>=3.1.0",
    "faker>=33.1.0",
    "instructor>=1.7.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb>=0.16.0",
    "open-clip-torch>=2.29.0",
    "openai>=1.55.2",
    "pillow>=11.0.0",
]
