[project]
name = "week6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

dependencies = [
    "anthropic>=0.40.0",
    "braintrust>=0.0.177",
    "instructor[google-generativeai]>=1.7.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jsonref>=1.1.0",
    "openai>=1.57.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]
