[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case_study"
version = "0.1.0"
description = "RAG system case study with WildChat dataset"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jason", email = "jason@jxnl.co"},
]
dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "requests",
    "instructor>=1.9.0",
    "rich",
    "diskcache",
    "typer[all]>=0.9.0",
    "sqlmodel",
    "datasets",
    "jinja2",
    "openai",
    "sentence-transformers",
    "pyarrow",
    "chromadb",
    "cohere>=5.15.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pipelines*", "experiments*"]
exclude = ["tests*", "teaching*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
